tests/untried/neg/t7110.check
t7110.scala:2: warning: A try without a catch or finally is equivalent to putting its body in a block; no exceptions are handled.
  try { ??? } // warn
  ^
error: No warnings can be incurred under -Xfatal-warnings.
1 warning found
1 error found
